force-app/main/default/objects/Allowance__c/Allowance__c.object-meta.xml
<CustomObject>
    <description>Stores all the allowances</description>
    <label>Allowance</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Allowance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allowances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>