force-app/main/default/objects/Allowance__c/fields/Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Type__c</fullName>
    <label>Allowance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House Rent Allowance</fullName>
            </value>
            <value>
                <fullName>Internet Allowance</fullName>
            </value>
            <value>
                <fullName>Hybrid Work Allowance</fullName>
            </value>
            <value>
                <fullName>Well Being Allowance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>